Update col-1-6b style to fix partner images alignment and margins

--- a/css/style.css
+++ b/css/style.css
@@ -731,15 +731,15 @@ nav#footer p{
 	}
 
 	.col-1-6b{
-		width: 16%;
+		width: 19%;
 		display: inline;
 		position: relative;
 		overflow: auto;
 		min-height: 1px;
-		padding-right: 0;
-		padding-left: 0;
-		float: left;
-		/*float: inherit;*/
+		padding-right: 5px;
+		padding-left: 5px;
+		margin-inline: 10px;
+		float: inherit;
 	}
 
 	.col-1-7{
